--- a/W3/index.html
+++ b/W3/index.html
@@ -36,7 +36,7 @@
                     <td>Футболка</td>
                     <td><img src="./img/dragon.jpg" alt="футболка с драконом" width="50px" height="50px"></td>
                     <td>
-                       <a href="./museum-dom/index.html"class="link_profile">Перейти на сайт заказчика
+                       <a href="./museum-dom/museumMain.html"class="link_profile">Перейти на сайт заказчика
                        </a> </td>
                 </tr>
             </tbody>
